# tomodachi-macrogen

./: .gitignore  .gitmodules  AGENT.MD  README-en.md  README-zh.md  README.md  README_RUN-en.html  README_RUN-en.template.md  README_RUN.html  README_RUN.template.md  config.default.json  config.slow.json  pyproject.toml  requirements.txt  swicc_runner.py  tomodachi_build_gui.py  tomodachi_check_version.py  tomodachi_gui.py  tomodachi_macrogen.py
.github/workflows/: python-app.yml
scripts/: build_gui.py  check_version.py
src/: __init__.py  color_picker.py  config.py  game_palette.py  glams_format.py  gui_i18n.py  gui_theme.py  gui_workers.py  living_grid.py  macro_writer.py  palette.py  path_planner.py  resources.py  splitter.py  swicc_format.py
tests/: test_color_conversion.py  test_color_picker_press.py  test_game_palette.py  test_gui_i18n.py  test_living_grid.py  test_macro_writer.py  test_output_dir.py  test_output_invariance.py  test_palette_batching.py  test_path_planner.py  test_run_readme_resources.py  test_split_by_color.py  test_swicc_runner.py
tests/fixtures/: example.json  example_game.json
