[project]
name = "tomodachi-macrogen"
version = "1.0.0"
description = "Generate SwiCC macro scripts for Tomodachi Life face paint automation."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "Pillow>=10.0",
  "PyQt6>=6.7",
  "pyserial>=3.5",
  "python-i18n>=0.3.9",
  "tqdm>=4.67",
]

[project.scripts]
tomodachi-macrogen = "tomodachi_macrogen:main"
tomodachi-gui = "tomodachi_gui:main"

[dependency-groups]
build = [
  "pyinstaller>=6.20",
]
dev = [
  "pyupgrade>=3.20.0",
  "ruff>=0.11.0",
]
test = [
  "pytest>=8.3",
  "pytest-xdist>=3.6",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["tomodachi_macrogen", "tomodachi_gui", "swicc_runner"]
packages = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
